Allow multiple services, allow configuration via api
